tests/invalid_inputs/sema/func_ret_array.cpp

int (func())[5];

int main() {

}
